@@ -1,16 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST stomp-1.1.3.gem 16896 RMD160 58374ca7e12ef760954e59b5d236cd311b810390 SHA1 5b2485ef1ce8bbf46f378e070b5b919d8f98829c SHA256 3643dcd3ef88863e12f5e4d0008a96059a9f7ca83f6050523af3dd64735d1811
 DIST stomp-1.1.5.gem 24576 RMD160 39704895a4d46e3749d3823490cdee61dcca144c SHA1 bed6a25a839887bf3fe6a59417922496b7372b65 SHA256 b318b9e3d8d1e86c8cf6fbb403b429feefc5bb5aa1a80521a5689371c0972cd9
-EBUILD stomp-1.1.3.ebuild 352 RMD160 3f2a93f5d55ebb41e713f5430b8afd2e9f4e06b5 SHA1 67419e0138b5bdfe2df7838345151e68ddc10844 SHA256 838b2da1e130444fef72a13551dc794d284078635ee1f432b85f2c82fe3617d3
+DIST stomp-1.1.gem 14336 RMD160 dc6deea6a21c277690e1965b25ffff0351407bfd SHA1 668b75c954259df81f1a2e0eadab3225f8546d68 SHA256 cde672675a9d764f01f61345871f7d11cb2a8e1535e88e724f0535fcb1fc72f2
 EBUILD stomp-1.1.5.ebuild 414 RMD160 58679f27df908a3312eacdd1a81b031da5916991 SHA1 930825a5423cfcee91991971e7902d4afc27ea46 SHA256 4c5296b41c1fb2e56da9dfc97c6f4991454fff3b080a2e14ef01b6bbb6e11eb8
-MISC ChangeLog 539 RMD160 4141377d2c1a1712c5aaab8b1cea50316ad03716 SHA1 4b4fe4d77ec2c5ec667d83af24a2e5c5bd33cf2c SHA256 dcaf1f94a97514d078cb1362915fc44321a11ec00c8df08d9a7cda5b15d5cf93
+EBUILD stomp-1.1.ebuild 399 RMD160 29e62f561c42b63274abfb49b61504319c8c6ce7 SHA1 fe7aa30f8074395a354004d88c88ae3232eef65a SHA256 ab4495840f0ea136e23aaa0e6c1fe59b5fc007df51e634dd3a1b91ffb5dd75ec
+MISC ChangeLog 701 RMD160 a924bd6d81d2990d18f453d9cfc06b90391cb0fd SHA1 b5279cef6dfb2fb065328cfe40680efeaf8c6750 SHA256 fa203577f3e63eb3c2c749ebb1a04d8551712782743934352aa223e2fc486855
 MISC metadata.xml 394 RMD160 092098e634db06f7e10e0c15e2123235d66275ac SHA1 199f98c8128b22879311c77ab22bb4ef7b3c935b SHA256 ff931d992199c7ac34a3f549d4ebddc7a003db865606636e38576ed9cf3890ba
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iD8DBQFMDjVhQW+hXSf0t0IRAsZfAJsF863mKAjZ7h/KRNcUZDeC1EduZwCg0n+z
-KbLzktjdNsWkWFUNICmv1Uo=
-=mMez
+iD8DBQFMDkMcQW+hXSf0t0IRAkk3AKDtdbRSxfL+7Hlg6a+puaZppFmzxgCfT+87
+Ei3ZYBFhnirDB+bzyPL8he8=
+=wUFA
 -----END PGP SIGNATURE-----
