@@ -2,7 +2,13 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-inherit ruby gems
+EAPI="2"
+
+USE_RUBY="ruby18 ruby19 jruby ree18"
+
+RUBY_FAKEGEM_EXTRADOC="README.rdoc"
+
+inherit ruby-fakegem
 
 DESCRIPTION="Ruby bindings for the stomp messaging protocol"
 HOMEPAGE="http://rubyforge.org/projects/stomp/"
@@ -11,8 +17,3 @@ LICENSE="Apache-2.0"
 SLOT="0"
 KEYWORDS="~x86 ~amd64"
 IUSE=""
-USE_RUBY="ruby18"
-
-DEPEND=""
-RDEPEND=""
-
