@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*stomp-1.1 (08 Jun 2010)
+
+  08 Jun 2010; Lance Albertson <ramereth@gentoo.org> +stomp-1.1.ebuild,
+  -stomp-1.1.3.ebuild:
+  add 1.1 for mcollective, remove 1.1.3
+
 *stomp-1.1.5 (08 Jun 2010)
 
   08 Jun 2010; Lance Albertson <ramereth@gentoo.org> +stomp-1.1.5.ebuild:
